# dkos

./: .gitignore  Cargo.toml  GNUmakefile  README.md  bochsrc  justfile  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
kernel/: CMakeLists.txt  Cargo.toml  build.rs  justfile
kernel/src/: display.rs  fbcon.rs  flush_gdt.s  gdt.rs  idt.rs  interrupt_stub.s  main.cc  main.rs  requests.rs  writer.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  interrupt_stub.s  mem.rs  mod.rs
