[workspace]
resolver = "3"
members = [
"kernel"
]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
limine = "0.5.0"
spleen-font = { version = "0.2.0", features = ["s12x24"] }
uart_16550 = "0.4.0"
spin = "0.10.0"
