[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
x86_64.workspace = true
spleen-font.workspace = true
uart_16550.workspace = true
limine.workspace = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
