[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
x86_64.workspace = true
spleen-font.workspace = true
uart_16550.workspace = true
limine.workspace = true
lazy_static.workspace = true
spin.workspace = true
talc = "4.4.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
